--- a/src/ui/connection_widget.kv
+++ b/src/ui/connection_widget.kv
@@ -1,69 +1,72 @@
+#:include ui/colors.kv
+#:import BGColoredBoxLayout ui.themed_widgets.BGColoredBoxLayout
+
+
 <ConnectionWidget>:
 
-    kRPC_CWB: kRPC_CWB
-    connection_CWB: connection_CWB
-    vessel_CWB: vessel_CWB
-
-    BoxLayout:
-        orientation: 'vertical'
-
-        ConnectionParameters:
-
-        BoxLayout:
-            orientation: 'horizontal'
-
-            ConnectionWidgetFlag:
-                id: kRPC_CWB
-
-            ConnectionWidgetFlag:
-                id: connection_CWB
-
-            ConnectionWidgetFlag:
-                id: vessel_CWB
-
-
-<ConnectionWidgetFlag>:
-    orientation: 'vertical'
-    upper_label: upper_label
-    lower_label: lower_label
-
-    Label:
-        id: upper_label
-        text: '###'
-
-    Label:
-        id: lower_label
-        text: '###'
-
-
-<ConnectionParameters>:
-
-    start_button: start_button
+    connect_button: connect_button
     ip_input: ip_input
     rpc_port_input: rpc_port_input
     stream_port_input: stream_port_input
 
-    Button:
-        id: start_button
-        text: ">> CONNECT <<"
-        on_press: root.krpc_connect()
+    orientation: 'vertical'
+    spacing: 10
+    padding: 10
         
+    Label:
+        text: 'IP address:'
     TextInput:
         id: ip_input
-        text: 'IP'
+        text: '127.0.0.1'
+        font_size: self.height / 2
         halign: 'center'
+        multiline: False
+        hint_text: 'XXX.XXX.XXX.XXX'
         foreground_color: 1, 0, 0, 1
-        on_touch_down: root.select_ip()
+        padding: 0, (self.height - self.line_height) // 2, 0, 0
 
-
+    Label:
+        text: 'RPC Port (default 50000):'
     TextInput:
         id: rpc_port_input
-        text: 'RPC port'
+        text: '50000'
+        font_size: self.height / 2
         halign: 'center'
         foreground_color: 1, 0, 0, 1
+        padding: 0, (self.height - self.line_height) // 2, 0, 0
 
+    Label:
+        text: 'Stream port (default 50001):'
     TextInput:
         id: stream_port_input
-        text: 'Stream port'
+        text: '50001'
+        font_size: self.height / 2
         halign: 'center'
         foreground_color: 1, 0, 0, 1
+        padding: 0, (self.height - self.line_height) // 2, 0, 0
+
+    Button:
+        id: connect_button
+        text: ">> CONNECT <<"
+        on_press: root.krpc_connect()
+
+<ErrorPopup>
+    auto_dismiss: False
+    title:'OS connection error!'
+
+    size_hint: .5, .5
+    title_size: 20
+    title_align: 'center'
+    separator_color: white
+
+    BGColoredBoxLayout:
+        orientation: 'vertical'
+        Label:
+            text_size: self.size
+            halign: 'center'
+            valign: 'middle'
+            text: 'This error is probably due to wrong connection parameters or a firewall not open!'
+        Button:
+            size_hint_y: .2
+            text: 'OK'
+            on_press: root.dismiss()
