UI: - status bar linked to GameScene stream - Navigation bar implements a ScreenManager - logger is a standalone module - Other stuff I don't remember

--- a/src/KRPC.kv
+++ b/src/KRPC.kv
@@ -1,4 +1,4 @@
-#:import ConnectionWidget ui.connection_widget
+#:import ConnectionScreen ui.connection_widget
 
 <StatusBar>:
     kRPC_version_label: kRPC_version_label
@@ -32,7 +32,7 @@
 <MainWindow>:
     orientation: 'vertical'
 
-    ConnectionWidget:
+    ConnectionScreen:
 
     StatusBar:
         size_hint_max_y: 30
