--- a/src/ui/colors.kv
+++ b/src/ui/colors.kv
@@ -2,6 +2,7 @@
 
 #: set default_background_color (171/255, 171/255, 171/255, 1)
 #: set white (1, 1, 1, 1)
-#: set red (0, 1, 0, 1)
+#: set red (1, 0, 0, 1)
+#: set black (0, 0, 0, 1)
 #: set orange (223/255, 105/255, 17/255, 1)
 #: set blue_background (0, 47/255, 1, 74/255)
