--- a/src/ui/status_bar.kv
+++ b/src/ui/status_bar.kv
@@ -16,7 +16,7 @@
             text: 'kRPC: '
         Label:
             id: krpc_version
-            text: root.client.krpc_version
+            text: "###"
             bold: True
 
         Label:
